--- a/FreelanceManager.Desktop/View/WorkProjects/WorkProjectAddView.xaml
+++ b/FreelanceManager.Desktop/View/WorkProjects/WorkProjectAddView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FreelanceManager.Desktop.View.WorkProjects.AddWorkProject"
+﻿<UserControl x:Class="FreelanceManager.Desktop.View.WorkProjects.WorkProjectAddView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,11 +8,11 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Name="MainStackPanel">
         <Label Style="{StaticResource H2}">Add Project</Label>
-        <Label>Name</Label>
+        <Label  Style="{StaticResource LabelInput}">Name</Label>
         <TextBox Name="TbName" Text="{Binding  Path=Name, Mode=TwoWay}"/>
-        <StackPanel Orientation="Horizontal">
-            <Button DockPanel.Dock="Bottom" Name="BtnSave" Click="BtnSave_Click">Save</Button>
-            <Button DockPanel.Dock="Bottom" Name="BtnCancel" Click="BtnCancel_Click">Cancel</Button>
+        <StackPanel Margin="{StaticResource VMargin}" Orientation="Horizontal">
+            <Button DockPanel.Dock="Bottom" Name="BtnSave" Click="BtnSave_Click" Style="{StaticResource HButtons}">Save</Button>
+            <Button IsCancel="True" DockPanel.Dock="Bottom" Name="BtnCancel" Click="BtnCancel_Click" Style="{StaticResource HButtons}">Cancel</Button>
         </StackPanel>
     </StackPanel>
 </UserControl>
