--- a/FreelanceManager.Desktop/View/WorkTasks/WorkTaskAddView.xaml
+++ b/FreelanceManager.Desktop/View/WorkTasks/WorkTaskAddView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FreelanceManager.Desktop.View.WorkTasks.AddWorkTask"
+﻿<UserControl x:Class="FreelanceManager.Desktop.View.WorkTasks.WorkTaskAddView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,13 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Name="MainStackPanel">
         <Label Style="{StaticResource H2}">Add Task</Label>
-        <Label>Name</Label>
+        <Label Style="{StaticResource LabelInput}">Name</Label>
         <TextBox Name="TbName" Text="{Binding Path=Name, Mode=TwoWay}"/>
-        <Label>Project ID</Label>
+        <Label Style="{StaticResource LabelInput}">Project ID</Label>
         <TextBox IsEnabled="False" Text="{Binding Path=WorkProjectId, Mode=TwoWay}"/>
-        <StackPanel Orientation="Horizontal">
-            <Button Name="BtnSave" Click="BtnSave_Click">Save</Button>
-            <Button Name="BtnCancel" Click="BtnCancel_Click">Cancel</Button>
+        <StackPanel Margin="{StaticResource VMargin}" Orientation="Horizontal">
+            <Button Name="BtnSave" Click="BtnSave_Click" Style="{StaticResource HButtons}">Save</Button>
+            <Button IsCancel="True" Name="BtnCancel" Click="BtnCancel_Click" Style="{StaticResource HButtons}">Cancel</Button>
         </StackPanel>
     </StackPanel>
 </UserControl>
