--- a/FreelanceManager.Desktop/View/WorkTimeRanges/WorkTimeRangesView.xaml
+++ b/FreelanceManager.Desktop/View/WorkTimeRanges/WorkTimeRangesView.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="FreelanceManager.Desktop.View.WorkProjects.WorkProjectsView"
+﻿<UserControl x:Class="FreelanceManager.Desktop.View.WorkTimeRanges.WorkTimeRangesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:FreelanceManager.Desktop.View.WorkProjects"
              xmlns:converters="clr-namespace:FreelanceManager.Desktop.View.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -17,23 +16,23 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="0">
-            <Label Style="{StaticResource H1}">Projects</Label>
+            <Label Style="{StaticResource H1}">Time Ranges</Label>
             <StackPanel Margin="{StaticResource VMargin}" Orientation="Horizontal">
-                <Button Name="BtnExport" Style="{StaticResource HButtons}" Click="BtnExport_Click">Export</Button>
                 <Button Name="BtnAdd" Click="BtnAdd_Click" Style="{StaticResource HButtons}">Add</Button>
                 <Button Name="BtnRemove" Click="BtnRemove_Click" IsEnabled="{Binding ElementName=MainListView, Path=SelectedIndex, Converter={StaticResource IsSelectedConverter}}" Style="{StaticResource HButtons}">Remove</Button>
             </StackPanel>
-            <ListView Margin="{StaticResource VMargin}" Name="MainListView" SelectionChanged="MainListView_SelectionChanged">
+            <ListView Margin="{StaticResource VMargin}" Name="MainListView">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn DisplayMemberBinding="{Binding Id}" Header="Id"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding TotalHours}" Header="Total Hours"/>
+                        <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Id}"/>
+                        <GridViewColumn Header="Start" DisplayMemberBinding="{Binding Start}"/>
+                        <GridViewColumn Header="End" DisplayMemberBinding="{Binding End}"/>
+                        <GridViewColumn Header="Total Hours" DisplayMemberBinding="{Binding TotalHours}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
             <Label Name="LabelHours" Style="{StaticResource LabelTotal}">0</Label>
         </StackPanel>
-        <Frame Name="MainFrame" Grid.Column="2"/>
+        <Frame Grid.Column="2" Name="MainFrame"></Frame>
     </Grid>
 </UserControl>
