--- a/FreelanceManager.Desktop/View/UserControls/ButtonSidebar.xaml
+++ b/FreelanceManager.Desktop/View/UserControls/ButtonSidebar.xaml
@@ -5,5 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Button x:Name="btn" Content="{Binding Text}" Click="ButtonClick" />
+    <Button x:Name="btn" Click="ButtonClick">
+        <Label Padding="0" Margin="0" Visibility="{Binding TextVisibility}" Content="{Binding Text}"/>
+    </Button>
 </UserControl>
