--- a/FreelanceManager.Desktop/View/WorkTasks/WorkTasksView.xaml
+++ b/FreelanceManager.Desktop/View/WorkTasks/WorkTasksView.xaml
@@ -19,9 +19,10 @@
         <StackPanel Grid.Column="0">
             <Label Name="LabelProject" Style="{StaticResource H1}">Tasks</Label>
             <StackPanel Margin="{StaticResource VMargin}" Orientation="Horizontal">
+                <Button Name="BtnBack" Style="{StaticResource HButtons}" Click="BtnBack_Click">&lt;</Button>
+                <Button Name="BtnAdd" Click="BtnAdd_Click" Style="{StaticResource HButtons}">+</Button>
+                <Button Name="BtnRemove" Click="BtnRemove_Click" IsEnabled="{Binding ElementName=MainListView, Path=SelectedIndex, Converter={StaticResource IsSelectedConverter}}" Style="{StaticResource HButtons}">-</Button>
                 <Button Name="BtnExport" Click="BtnExport_Click" Style="{StaticResource HButtons}">Export</Button>
-                <Button Name="BtnAdd" Click="BtnAdd_Click" Style="{StaticResource HButtons}">Add</Button>
-                <Button Name="BtnRemove" Click="BtnRemove_Click" IsEnabled="{Binding ElementName=MainListView, Path=SelectedIndex, Converter={StaticResource IsSelectedConverter}}" Style="{StaticResource HButtons}">Remove</Button>
             </StackPanel>
             <StackPanel Margin="{StaticResource VMargin}">
                 <TextBox x:Name="TbFilter" TextChanged="TbFilter_TextChanged"></TextBox>
