--- a/FreelanceManager.Desktop/App.xaml
+++ b/FreelanceManager.Desktop/App.xaml
@@ -40,6 +40,12 @@
             <Setter Property="Margin" Value="{StaticResource VMargin}"/>
         </Style>
 
+        <Style x:Key="MainTitle" TargetType="Label" BasedOn="{StaticResource Base}">
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="Foreground" Value="{StaticResource Color4}"/>
+        </Style>
+        
         <Style x:Key="H1" TargetType="Label" BasedOn="{StaticResource Base}">
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontSize" Value="24"/>
