--- a/FreelanceManager.Desktop/MainWindow.xaml
+++ b/FreelanceManager.Desktop/MainWindow.xaml
@@ -5,23 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:uc="clr-namespace:FreelanceManager.Desktop.View.UserControls"
         mc:Ignorable="d"
-        Title="MainWindow" 
-        Width="1000"
-        Height="500"
+        Title="Freelancer Manager" 
+        Width="800"
+        Height="400"
         Background="{StaticResource Color2}">
     <Window.Resources>
     </Window.Resources>
     <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Padding="30,0,0,0">
+        <ScrollViewer Name="MainScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Padding="50,0,0,0">
             <Frame Name="FrameOpt"/>
         </ScrollViewer>
         <Border Name="Sidebar" HorizontalAlignment="Left" BorderBrush="{StaticResource Color4Dark}" MouseEnter="Sidebar_MouseEnter" MouseLeave="Sidebar_MouseLeave">
-            <DockPanel LastChildFill="False" Background="{StaticResource Color2Dark}">
-                <StackPanel DockPanel.Dock="Top">
-                    <uc:ButtonSidebar x:Name="BtnProjects" Text="Projects"/>
-                    <uc:ButtonSidebar x:Name="BtnBills" Text="Bills"/>
-                </StackPanel>
-            </DockPanel>
+            <StackPanel Background="{StaticResource Color2Dark}">
+                <Label Name="MainTitle" Style="{StaticResource MainTitle}" HorizontalContentAlignment="Center">
+                    <TextBlock>Freelancer<LineBreak/>Manager</TextBlock>
+                </Label>
+                <uc:ButtonSidebar x:Name="BtnProjects" Text="Projects"/>
+                <uc:ButtonSidebar x:Name="BtnBills" Text="Bills"/>
+            </StackPanel>
         </Border>
     </Grid>
 </Window>
